fixed birth year alignment

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -36,7 +36,6 @@
     min-height: 35%;
     display: flex;
     flex-direction: column;
-    /* justify-content: ; */
     padding: 8px;
     border-radius: 0px 0px 6px 6px;
     background-color: rgba(33, 45, 42, 0.8);
@@ -48,13 +47,14 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: end;
     text-align: left;
     border-bottom: 1px solid #a49c91;
 }
 
 .card-btn__primary-info .card-btn__birth-year {
     font-style: italic;
+    text-wrap: nowrap;
 }
 
 .card-btn__secondary-info {
